--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
   deploy:
-    name: sgsdfa
+    name: Deploy
     runs-on: ubuntu-latest
     permissions:
       id-token: write # Needed for auth with Deno Deploy
