--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "sgsdfa"
-          entrypoint: "deno.js" # TODO: update entrypoint
+          project: sgsdfa
+          entrypoint: deno.js
